[metadata]
name = pytrack-sent
version = 0.1.0
author = sentinel
author_email = sentinelffx@gmail.com
description = Lightweight Python performance & event tracker
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sentinel69402/Pytrack
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    typing-extensions ; python_version < "3.10"